@@ -36,6 +36,7 @@ public:
     enum EncodingType {
         DefaultEncoding,
         AutoDetectedEncoding,
+        EncodingFromXMLHeader,
         EncodingFromMetaTag,
         EncodingFromHTTPHeader,
         UserChosenEncoding
@@ -58,11 +59,13 @@ public:
 protected:
     // codec used for decoding. default is Latin1.
     QTextCodec *m_codec;
-    QTextDecoder *m_decoder; // only used for utf16
+    QTextDecoder *m_decoder;
     QCString enc;
     EncodingType m_type;
 
 #if APPLE_CHANGES
+    // Our version of QString works well for all-8-bit characters, and allows null characters.
+    // This works better than QCString when there are null characters involved.
     QString buffer;
 #else
     QCString buffer;
@@ -73,5 +76,6 @@ protected:
     bool visualRTL;
 };
 
-};
+}
+
 #endif
